message alignement corrected

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -267,7 +267,7 @@ table.index tfoot {
 }
 
 .message {
-	width: 96%;
+	width: 92%;
 	min-height: 34px;
 	padding: 8px 0px 0px 50px;
 	margin: 4px 0;
